fix: Make blog post title (h1) fully visible with white color

--- a/src/pages/blog/Blog.css
+++ b/src/pages/blog/Blog.css
@@ -261,6 +261,7 @@
   font-weight: 700;
   margin: 20px 0;
   line-height: 1.2;
+  color: #ffffff !important;
 }
 
 .lead-answer {
